Re Organize Page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"> 
 
   <head>
+    <meta charset="utf-8"/>
     <script data-require="angularjs@1.5.8" 
 		data-semver="1.5.8" 
 		src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.8/angular.js"
@@ -10,22 +11,21 @@
 
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
-  <style>
-   .hero_comp {background-color:lightyellow;
-		border:2px solid orange;
-		padding:12px;
-		font-size:20px;
-		font-family: Helvetica;
-		max-width:10cm;
-		}
-  </style>
+
+ 
   </head>
 
   <body>
 	index.html
     <br> 
-
-    <heros></heros>
+    <br>
+    <heros type="" data="change server appoint"></heros><br>
+    <heros type="" data="modify appoint"></heros><br>
+    <heros type="1" data="report seminar" ></heros><br>
+    <heros type="1" data="add user appoint"></heros><br>
+    <heros type="" data="create this demo"></heros><br>
+    <heros type="2" data="git push this demo"></heros><br>
+    <heros type="2" data="git push"></heros><br>
      
   </body>
 
