spit file with tsconfig and // @ts-ignore , with one out *,js file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
 
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <script src="dist/script_all.js"></script>
 
  
   </head>
